Changes in 3.4.3-dev
YYYY-MM-DD

- Bug fixes / improvements
 - Fix build on OpenBSD (#700)
 - Fix build on HP-UX 11.23 (#664)
 - Throw a ParseException on missing chars from HEXWKB string (#675)
 - Fix ruby binding build (https://github.com/libgeos/libgeos/pull/32)
 - Make polygonize operation interruptable
 - Update for Visual Studio 2013 (#691)

Changes in 3.4.2
2013-08-25

- Bug fixes / improvements
  - Use a double for PrecisionModel scale, avoiding overflows 
    should fix 32-bit regression failures (#652)
  - isnan workaround OS detection missing NetBSD, DragonFly, Sun nuance (#650)
  - Do not distribute platform.h and version.h, but install both (#601)
  - Non-standard ChangeLog file in 3.4.0 and 3.4.1 releases (#654) 
  - new travis bot (#657)
  - accept multiple Nan representations (#656)
		

Changes in 3.4.1
2013-08-17

- Bug fixes / improvements
  - Assertion failure snapping line to points of rectangle
    smaller than tolerance (#649)
  - Can't build using cmake with tar ball (#644)

Changes in 3.4.0
2013-08-11

- New things:
  - Delaunay Triangulation API (#487, #565, #570, #567)
  - Interruptibility API (C and C++)
  - CAPI: GEOSNode (#496) - PHP: Geometry->node
  - GeometryPrecisionReducer class (#496, #526)
  - BufferInputLineSimplifier header exposed (#548)
  - New Centroid class supporting mixed geometry components (#612)
  - io::Writer::reserve() method
  - CAPI: GEOSNearestPoints
  - Add --cclibs, --static-clibs and --static-cclibs to geos-config (#497)
  - Early bail out of overlay exception if input is invalid

- C++ API changes:
  - New noding::GeometryNoder class
  - Added BufferOp::setSingleSided 
  - Signature of most functions taking a Label changed to take it
    by reference rather than pointer.
  - Signature of most functions taking an IntersectionMatrix changed
    to take it by reference rather than pointer.
  - GraphComponent::label is now a Label value (from a pointer)